2009-06-02: Jason Long <jlong@messiah.edu>
 * t/policy.t: test for the as_string() method

 -- VERSION 0.36 --

2009-06-02: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm (as_string): restore this method which was
   accidentally removed in 0.34.

 -- VERSION 0.35 --

2009-05-22: Jason Long <jlong@messiah.edu>
 * t/signer.t: add a test-case of a message with 10000's of blank
   lines; this seems to DoS the canonicalization routines
 * lib/Mail/DKIM/Canonicalization/{simple,relaxed,dk_simple}.pm:
   fix for bug reported on amavis-user list, patch provided by
   Mark Martinec. Thanks!

 -- VERSION 0.34 --

2009-05-20: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM.pm: rewrite the description section of the Mail::DKIM
   man page
 * lib/Mail/DKIM/Verifier.pm: document fetch_author_domain_policies()
 * Makefile.PL: release 0.34

2009-05-18: Jason Long <jlong@messiah.edu>
 * t/signer.t: add a test-case of a message without a header
 * lib/Mail/DKIM/Common.pm (init): initialize variables used by methods
   in this class; fixes RT.CPAN.ORG bug #46179

2009-04-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (fetch_author_domain_policies): new method
   for fetching ADSP records for a particular message

2009-04-03: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkPolicy.pm: moved the DomainKeys-specific policy
   stuff from Policy.pm to here
 * t/policy.t: change tests to use DkPolicy instead of Policy
 * lib/Mail/DKIM/Verifier.pm (fetch_sender_policy): use DkPolicy
   class instead of Policy class

2009-04-03: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/AuthorDomainPolicy.pm: first draft of ADSP support

2009-04-03: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: rename fetch_policies() to policies()
 * scripts/dkimverify.pl: replace use of fetch_policies() with
   policies()

2009-03-30: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: document a "temperror" result, which
   I will soon provide support for
