@@ -1,3 +1,7 @@
+2009-06-09: Jason Long <jlong@messiah.edu>
+ * t/signer.t: test case for bug 2803465: space between header field
+   name and colon cause signature to skip that header
+
 2009-06-02: Jason Long <jlong@messiah.edu>
  * t/policy.t: test for the as_string() method
 
